added the first blog

--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo </title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor, 
-    sit amet consectetur 
-    adipisicing elit. Rem 
-    culpa exercitationem 
-    quisquam repudiandae 
-    laborum, eveniet molestias 
-    omnis nihil vel natus 
-    pariatur sequi dolor 
-    fugiat ad, maiores quae 
-    ipsam a impedit?</p>
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum, dolor sit 
+        amet consectetur 
+        adipisicing elit. 
+        Accusamus aliquid eius 
+        ad neque veritatis nesciunt 
+        distinctio dignissimos totam 
+        blanditiis culpa, quia 
+        laborum excepturi architecto 
+        laboriosam consequatur 
+        perspiciatis eaque recusandae 
+        connecter.</p>
+    </div>
 </body>
 </html>
