add my recent work

--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
         perspiciatis eaque recusandae 
         connecter.</p>
     </div>
+    <div>
+        <h3>You to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit massage"</li>
+            <li>git push</li>
+        </ul>
+    </div>
+    <div>
+        <h3>I want my recent future to look like this picture</h3>
+        <img src="styles/fmly.jpeg" alt="" style="width: 300px;">
+    </div>
 </body>
 </html>
